Small update requarding text

--- a/styles/main.css
+++ b/styles/main.css
@@ -163,6 +163,7 @@ section {
 
 .input {
   width: 100%;
+  padding: 1rem;
 }
 
 .input-title {
@@ -243,6 +244,9 @@ section {
   }
   .add-unit {
     width: 60%;
+  }
+  .input {
+    padding: 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
